# alo-lakehouse

./: .dbt-checkpoint.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  CLAUDE.md  Dockerfile  Justfile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/actions/dbt/: action.yml
.github/workflows/: changed-files.yaml  dev.yaml  pr.yaml  prod.yaml  reusable-workflow.yaml
.github/workflows/support/: .dbt-checkpoint.yaml.txt  profiles.yml.txt
databricks/clusters/: README.md  dev_cluster.json  prod_cluster.json
databricks/permissions/: README.md  dev_account_setup.sh  dev_workspace_setup.sql  groups_setup.sql  prod_account_setup.sh  prod_workspace_setup.sql
databricks/workflows/: README.md  daily_run.json  full_refresh.json
jobs/: alo-lakehouse.py
lakehouse/: dbt_project.yml  package-lock.yml  packages.yml
lakehouse/analyses/: README.md
lakehouse/macros/: case_check.sql  cents_to_dollars.sql  create_latest_version_view.sql  drop_ci_catalog_schema.sql  generate_schema_name.sql  grant_unity_catalog_permissions.sql
lakehouse/models/: sources.yml
lakehouse/models/bronze/: _bronze.yml  (+2 more)
montecarlo/: metric_monitor.yml  montecarlo.yml  notifications.yml
pyspark/: requirements.txt
pyspark/examples/: explore_catalog.py
pyspark/utils/: session.py
scripts/: deploy_workflows.py  run_sql.py  setup.sh
scripts/cd/: ebf.sh  release_doc.sh  rollback.sh  tag.sh  tag_with_release_doc.sh
scripts/permissions/: unity_catalog_permissions.py
scripts/templates/: profiles.yml.txt
(+5 files in other folders)
