[project]
name = "alo-lakehouse"
version = "0.1.0"
requires-python = ">=3.10,<3.13"

dependencies = [
    "dbt-core==1.9.4",
    "dbt-databricks==1.9.4",
    "rust-just>=1.40.0",
    "montecarlodata==0.124.0",
]

[dependency-groups]
dev = [
    "jinja2~=3.1.3",
    "pre-commit~=3.8.0",
    "shandy-sqlfmt[jinjafmt]~=0.23.2",
    "sqlfluff~=3.1.1",
    "sqlfluff-templater-dbt~=3.1.1",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 90
target-version = "py310"
